--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@
 asgiref==3.5.2 ; python_version >= '3.7'
 certifi==2022.6.15 ; python_version >= '3.6'
 distlib==0.3.5
+django-dotenv==1.4.2
 django==4.1b1
 filelock==3.7.1 ; python_version >= '3.7'
 pbr==5.9.0 ; python_version >= '2.6'
