--- a/requirements.txt
+++ b/requirements.txt
@@ -10,20 +10,20 @@
 # `Pipfile.lock` and then regenerate `requirements*.txt`.
 ################################################################################
 
-asgiref==3.5.2 ; python_version >= '3.7'
-certifi==2022.6.15 ; python_version >= '3.6'
+asgiref==3.5.2
+certifi==2022.6.15
 distlib==0.3.5
 django-dotenv==1.4.2
 django==4.1b1
-filelock==3.7.1 ; python_version >= '3.7'
-pbr==5.9.0 ; python_version >= '2.6'
-pip==22.1.2 ; python_version >= '3.7'
+filelock==3.7.1
+pbr==5.9.0
+pip==22.1.2 ;
 pipenv-to-requirements==0.9.0
-pipenv==2022.7.4 ; python_version >= '3.7'
-platformdirs==2.5.2 ; python_version >= '3.7'
-setuptools==63.2.0 ; python_version >= '3.7'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.4.2 ; python_version >= '3.5'
-virtualenv-clone==0.5.7 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pipenv==2022.7.4
+platformdirs==2.5.2
+setuptools==63.2.0
+six==1.16.0
+sqlparse==0.4.2
+virtualenv-clone==0.5.7
 psycopg==2.8.4
-virtualenv==20.15.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+virtualenv==20.15.1
