--- a/ebextensions/django.config
+++ b/ebextensions/django.config
@@ -1,3 +1,5 @@
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: config.wsgi
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "config.settings.production"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: "config/wsgi.py"
