--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 pipenv-to-requirements = "*"
 django-dotenv = "*"
 django-bootstrap-v5 = "*"
+python-telegram-bot = "*"
 
 [dev-packages]
 black = "*"
